--- a/example/index.html
+++ b/example/index.html
@@ -33,7 +33,7 @@
 			</div>
 			<div class="grid-elem">
 				<div class="person">
-					<img src="https://graph.facebook.com/higatv/picture?width=540&height=540">
+					<img src="https://graph.facebook.com/GalimbertiSara/picture?width=540&height=540">
 				</div>
 			</div>
 			<div class="grid-elem">
@@ -89,8 +89,39 @@
 		</div>
 	</div>
 
-
 	<!-- secondo esempio -->
+	<div class="limitatore paddTB20">
+		<div class="animated-grid" grid-num="5">
+			<div class="grid-elem">
+				<div class="person">
+					<img src="https://graph.facebook.com/1689018584656941/picture?width=540&height=540">
+				</div>
+			</div>
+			<div class="grid-elem">
+				<div class="person">
+					<img src="https://graph.facebook.com/barackobama/picture?width=540&height=540">
+				</div>
+			</div>
+			<div class="grid-elem">
+				<div class="person">
+					<img src="https://graph.facebook.com/dariya.derkachlj/picture?width=540&height=540">
+				</div>
+			</div>
+			<div class="grid-elem">
+				<div class="person">
+					<img src="https://graph.facebook.com/itsjamiesworld/picture?width=540&height=540">
+				</div>
+			</div>
+			<div class="grid-elem">
+				<div class="person">
+					<img src="https://graph.facebook.com/Nanalew/picture?width=540&height=540">
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+	<!-- come funziona -->
 	<div class="limitatore paddTB20">
 		<div class="animated-grid" grid-num="5" grid-square="false">
 			<div class="grid-elem Byellow">					
