--- a/example/index.html
+++ b/example/index.html
@@ -6,6 +6,21 @@
 	<link rel="stylesheet" type="text/css" href="animatedGrid.css">
 
 	<script src="animatedGrid.js" type="text/javascript"></script>
+
+	<style type="text/css">
+		.darker .grid-elem{
+			background-color: rgb(60,60,60);
+		}
+
+		.grid-elem img{
+			opacity: .6;
+		}
+
+		.person img{
+			width: 100%;
+			height: 100%;
+		}
+	</style>
 </head>
 <body>
 
