--- a/example/index.html
+++ b/example/index.html
@@ -3,9 +3,9 @@
 <head>
 	<title>Animated Grid</title>
 	<link rel="stylesheet" type="text/css" href="https://rawgit.com/balde73/creativeGo/master/css/creativeGo.css">
-	<link rel="stylesheet" type="text/css" href="animatedGrid.css">
+	<link rel="stylesheet" type="text/css" href="../css/animatedGrid.css">
 
-	<script src="animatedGrid.js" type="text/javascript"></script>
+	<script src="../js/animatedGrid.js" type="text/javascript"></script>
 
 	<style type="text/css">
 		.darker .grid-elem{
