Aggiunge supporto resize e responsive layout

--- a/example/index.html
+++ b/example/index.html
@@ -25,7 +25,7 @@
 <body>
 
 	<div class="limitatore paddTB20">
-		<div class="animated-grid darker" grid-num="5" grid-square="true">
+		<div class="animated-grid darker" grid-num="5" grid-num-mob="3" grid-square="true">
 			<div class="grid-elem">
 				<div class="person">
 					<img src="https://graph.facebook.com/TheStig/picture?width=540&height=540">
