--- a/example/index.html
+++ b/example/index.html
@@ -21,6 +21,15 @@
 			height: 100%;
 		}
 	</style>
+
+	<script type="text/javascript">
+		
+		document.addEventListener('DOMContentLoaded', function(){ 
+		    var a = new SearchAnimatedGrid();
+		    a.createGrids();
+		});
+		
+	</script>
 </head>
 <body>
 
