Cambia nome grid-perspective

--- a/example/index.html
+++ b/example/index.html
@@ -146,7 +146,7 @@
 
 	<!-- secondo esempio -->
 	<div class="limitatore paddTB20">
-		<div class="animated-grid" grid-num="5" grid-perspective="true">
+		<div class="animated-grid" grid-num="5" grid-3d="true">
 			<div class="grid-elem">
 				<div class="person">
 					<img src="https://graph.facebook.com/1689018584656941/picture?width=540&height=540">
